--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="violão">
         <h1 class="v"> O Basico Do Violão</h1>
         <p>Bem vindo, aprenda um pouco mais 
-            <br>sobre violão e outras curiosiadades. </p>
+            <br>sobre violão e outras curiosidades. </p>
     </div>
 
     <section id="cred">
