--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="pages/construcao.html">Construção</a></li>
                 <li><a href="pages/aprendizagem.html">Aprendizagem</a></li>
                 <li><a href="pages/exemplos e avancos.html">Exemplos e Avanços</a></li>
-                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
             </nav>
             </ul>
         </div>
